--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-slick": "^0.29.0",
     "sass": "^1.51.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "^17.0.31",
     "@types/react": "^18.0.9",
+    "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.25",
     "autoprefixer": "^10.4.7",
     "eslint": "8.15.0",
